Release 2.5.1 - ???

   * The FileCommandDetector has been refactored to have the same
     behavior as the Siegfried detector; see setUseMime in the javadoc (TIKA-3902).

   * Fix bug in OpenSearch emitter that prevented upserts on
     documents with embedded files (TIKA-3882).

   * Extract PDF actions and triggers into the file's metadata (TIKA-3887).

   * Add a tika-async-cli module (TIKA-3885).

   * Fetch keys sent via headers to tika server are now URL decoded (TIKA-3864).


Release 2.5.0 - 09/30/2022

   * Improved extraction of PDF subset info for PDF/UA, PDF/VT, and PDF/X.
     NOTE: we no longer append PDF/A information, e.g. 'version="A-1b"'
     to the 'dc:format'. Users must now get that information from the
     'pdfa:PDFVersion' key or from 'pdfaid:conformance'
     and 'pdfaid:part' (TIKA-3844).

   * Avoid infinite loop in bookmark extraction from PDFs (TIKA-3832).

   * Upgraded to slf4j 2.0.1 (TIKA-3842).

   * Added upsert option for the OpenSearch emitter (TIKA-3855).

   * Extract PDF signature information at the document level
     into the metadata (TIKA-3852).

   * Enable configuration of digests via AutoDetectParserConfig (TIKA-3853).

   * Use commons-io byte array streams via PJ Fanning (TIKA-3843).

   * Upgrade to PDFBox 2.0.27 (TIKA-3866).

   * Upgrade to JempBox 1.8.17 (TIKA-3856).

   * Add extraction of ODF version from ODF files (TIKA-3840).

   * tika-parser-html-commons (BoilerPipeHandler) is no longer a
     a dependency of tika-parser-html-module. tika-app and tika-server-standard
     have added a dependency on tika-parser-html-commons.  However,
     users who are managing custom dependencies and who want the BoilerPipeHandler
     will have to now include the tika-parser-html-commons dependency
     (TIKA-1484).

   * Add unrar as an optional parser (TIKA-3800).

   * Refactor FuzzingCLI to use PipesParser (TIKA-3799).

   * ServiceLoader's loadServiceProviders() now guarantees
     unique classes (TIKA-3797).
